# tide-rs

./: .gitignore  Cargo.toml
src/: main.rs  model.rs
ui/: appwindow.slint
