[package]
name = "tide-rs"
version = "0.1.0"
authors = ["Kevin-Neil Klop <kevin.klop@yahoo.com"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
